; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bonding/extr_bond_3ad.c___agg_ports_are_ready.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bonding/extr_bond_3ad.c___agg_ports_are_ready.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aggregator = type { %struct.port* }
%struct.port = type { i32, %struct.port* }

@AD_PORT_READY_N = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.aggregator*)* @__agg_ports_are_ready to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__agg_ports_are_ready(%struct.aggregator* %0) #0 {
  %2 = alloca %struct.aggregator*, align 8
  %3 = alloca %struct.port*, align 8
  %4 = alloca i32, align 4
  store %struct.aggregator* %0, %struct.aggregator** %2, align 8
  store i32 1, i32* %4, align 4
  %5 = load %struct.aggregator*, %struct.aggregator** %2, align 8
  %6 = icmp ne %struct.aggregator* %5, null
  br i1 %6, label %7, label %28

7:                                                ; preds = %1
  %8 = load %struct.aggregator*, %struct.aggregator** %2, align 8
  %9 = getelementptr inbounds %struct.aggregator, %struct.aggregator* %8, i32 0, i32 0
  %10 = load %struct.port*, %struct.port** %9, align 8
  store %struct.port* %10, %struct.port** %3, align 8
  br label %11

11:                                               ; preds = %23, %7
  %12 = load %struct.port*, %struct.port** %3, align 8
  %13 = icmp ne %struct.port* %12, null
  br i1 %13, label %14, label %27

14:                                               ; preds = %11
  %15 = load %struct.port*, %struct.port** %3, align 8
  %16 = getelementptr inbounds %struct.port, %struct.port* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = load i32, i32* @AD_PORT_READY_N, align 4
  %19 = and i32 %17, %18
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %22, label %21

21:                                               ; preds = %14
  store i32 0, i32* %4, align 4
  br label %27

22:                                               ; preds = %14
  br label %23

23:                                               ; preds = %22
  %24 = load %struct.port*, %struct.port** %3, align 8
  %25 = getelementptr inbounds %struct.port, %struct.port* %24, i32 0, i32 1
  %26 = load %struct.port*, %struct.port** %25, align 8
  store %struct.port* %26, %struct.port** %3, align 8
  br label %11

27:                                               ; preds = %21, %11
  br label %28

28:                                               ; preds = %27, %1
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
